# microservices-rs-demo

./: .gitignore  Cargo.toml  README.md
conf/: application.yaml
src/: main.rs
src/api/: mod.rs
src/appctx/: config.rs  db.rs  mod.rs
src/log/: mod.rs
src/service/market/: entity.rs  mod.rs  request.rs
