[package]
name = "microservices-rs-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
futures = "0.3.30"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-native-tls" , "macros"] }
serde = { version = "1.0.210" , features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0" , features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
